--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="container">
 
 <div id="logo"> <span class="logo-default"><img src="adjustediBlogo.png">
-</span></div>
+</span> </div>
 
 
 
@@ -377,6 +377,17 @@
 </section>
 
 
+<section id = "events" data-aos="fade-up">
+<div class="container">
+<div class="heading-text heading-section">
+<h2>Events</h2>
+<span class="lead">We have no upcoming events at the moment. Stay tuned for future events!
+
+</span>
+</div>
+</div>
+</section>
+
 <div class="seperator p-b-0 p-t-0"><i class="fa fa-chevron-down"></i>
 </div>
 
@@ -411,13 +422,75 @@
 
 
 </section>
-<section id="sponsor" style="background-image:url(home.png);" data-aos="fade-up">
+<section id="sponsor" data-aos="fade-up">
     <div class="container">
 <div class="heading-text heading-section text-center m-b-40">
 <h2 class="m-b-0">Sponsors</h2>
 <span class="lead">We are in search of sponsors! Check out our packages below.</span>
 </div>
-<iframe src="https://drive.google.com/file/d/1rUtS7P2qY862tu2MeH-FNIMc4F-_11oJ/preview" width="640" height="480"></iframe>
+<div class="row pricing-table">
+<div class="col-lg-4 col-md-12 col-12">
+<div class="plan">
+<div class="plan-header">
+<h4>Tier A</h4>
+<p class="text-muted">Less than $100 or equivalent in products</p>
+<div class="plan-price"><sup>$</sup>0-100<span></span> </div>
+</div>
+<div class="plan-list">
+<ul>
+<li><i class="fa fa-instagram"></i>Two Social Media Posts</li>
+<li><i class="fa fa-thumbs-up"></i>Event Banner (if provided)</li>
+<li><i ></i></li>
+<li><i ></i></li>
+
+</ul>
+<div class="plan-button">
+<a href="https://drive.google.com/file/d/1rUtS7P2qY862tu2MeH-FNIMc4F-_11oJ/view?usp=sharing" class="btn btn-light">Learn More</a>
+</div>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-md-12 col-12">
+<div class="plan featured">
+<div class="plan-header">
+<h4>Tier AAA</h4>
+ <p class="text-muted">Over $500 or equivalent in products</p>
+<div class="plan-price"><sup>$</sup>500+<span></span> </div>
+</div>
+<div class="plan-list">
+<ul>
+<li><i class="fa fa-instagram"></i>Two Social Media Posts</li>
+<li><i class="fa fa-thumbs-up"></i>Event Banner (if provided)</li>
+<li><i class="fa fa-envelope"></i>Bi-weekly posts + Email</li>
+<li><i class="fa fa-user"></i>Product/Service shown at booth</li>
+</ul>
+<div class="plan-button">
+<a href="https://drive.google.com/file/d/1rUtS7P2qY862tu2MeH-FNIMc4F-_11oJ/view?usp=sharing" class="btn">Learn More</a>
+</div>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-md-12 col-12">
+<div class="plan">
+<div class="plan-header">
+<h4>Tier AA</h4>
+<p class="text-muted">Between $100 and $500 or equivalent in products</p>
+<div class="plan-price"><sup>$</sup>100-500<span></span> </div>
+</div>
+<div class="plan-list">
+<ul>
+<li><i class="fa fa-instagram"></i>Two Social Media Posts</li>
+<li><i class="fa fa-thumbs-up"></i>Event Banner (if provided)</li>
+<li><i class="fa fa-envelope"></i>Bi-weekly posts + Email</li>
+<li><i></i></li>
+</ul>
+<div class="plan-button">
+<a href="https://drive.google.com/file/d/1rUtS7P2qY862tu2MeH-FNIMc4F-_11oJ/view?usp=sharing" class="btn btn-light">Learn More</a>
+</div>
+</div>
+</div>
+</div>
+</div>
 </div>
 </section>
 <footer class="footer">
