--- a/contact.html
+++ b/contact.html
@@ -43,9 +43,8 @@
 <div class="header-inner">
 <div class="container">
 
-<div id="logo"> <a href="index.html"><span class="logo-default"><img src="logoblack.png">
-</span><span class="logo-dark"><img src="investbetalo.png">
-</span></a> </div>
+<div id="logo"><span class="logo-default"><img src="adjustediBlogo.png">
+</span> </div>
 
 
 
